# recipe_site

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  compose.yml  config.py  pyproject.toml  requirements.txt  run.py  upload_utils.py  utils.py
app/: __init__.py  auth.py  cli.py  forms.py  image_store.py  main.py  models.py  parse_docs.py  recipe_generator.py  recipes.py  scrapers.py
app/api/: __init__.py  common.py  recipes.py  users.py
app/models/: __init__.py  common.py  otc.py  recipe.py  user.py
app/parsing_model/: annotation_scraper.py  predict_model.py  torch_model.py  train_model.py
app/routes/: __init__.py  admin.py  auth.py  main.py  recipes.py
app/services/: email.py
app/static/css/: base.css  recipe_image_cropper.css
app/static/js/: recipe_image_cropper.js  validation.js
app/templates/: about.html  base.html  index.html
app/templates/auth/: admin_users.html  login.html  otc_admin.html  profile.html  profile_edit.html  register.html
app/templates/components/: base.html  recipe_card.html  user_table_row.html
migrations/versions/: 20260413_drop_user_machines.py  2a3552bff9df_add_oven_time_column_make_cook_time_non_.py  4332bb8ecf71_add_moderation_status.py  5b8d1c7a9e34_add_roles_user_activation_and_recipe_scores.py  6d6db1c2e5f1_move_recipe_images_to_filesystem.py  83a2830f5168_remove_recipe_machines.py  b7f9d24a1c3e_change_roles_from_string_to_int.py  c17afd94eb1b_update_resipe_ingredients_and_.py  c1d2e3f4a5b6_add_otc_table.py  d2f8ee6cee38_add_recipe_status_and_image_data_fields.py  d5b8202e4922_initial_migration_with_user_and_recipe_.py  fd61f64e663c_add_kitchen_machines_and_relationships.py
utils/: __init__.py  general.py  moderation.py  upload.py
(+12 files in other folders)
