[project]
name = "venv"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faker==22.0.0",
    "flask==3.0.0",
    "flask-login==0.6.3",
    "flask-migrate==4.0.5",
    "flask-session==0.5.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "werkzeug==3.0.1",
    "wtforms==3.1.1",
]
