[project]
name = "venv"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "faker==22.0.0",
    "flask==3.0.0",
    "flask-login==0.6.3",
    "flask-migrate==4.0.5",
    "flask-session==0.5.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "opencv-python>=4.13.0.90",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    "python-dotenv==1.0.0",
    "requests>=2.32.5",
    "sqlalchemy==2.0.23",
    "torch>=2.10.0",
    "werkzeug==3.0.1",
    "wtforms==3.1.1",
]
