[project]
name = "venv"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faker==22.0.0",
    "flask==3.0.0",
    "flask-login==0.6.3",
    "flask-migrate==4.0.5",
    "flask-session==0.5.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "Pillow>=10.0.0",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "werkzeug==3.0.1",
    "wtforms==3.1.1",
    "gunicorn==24.1.0",
    "requests>=2.34.2",
    "beautifulsoup4>=4.15.0",
    "spacy==3.8.11",
    "openai>=2.41.0",
    "nl-core-news-sm",
]

[tool.uv.sources]
nl-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/nl_core_news_sm-3.8.0/nl_core_news_sm-3.8.0-py3-none-any.whl" }
